# fastapi-docker

./: .env.example  .gitignore  README.md  app-cli.sh  compose.yml  pyproject.toml  start-docker.sh
.docker/dev/: Dockerfile  docker-entrypoint.sh
.docker/fastapi/: Dockerfile  docker-entrypoint.sh
app/: main.py
app/api/: dependencies.py  router.py
app/api/v1/: health.py  users.py
app/core/: config.py  lifespan.py  logging.py
app/schemas/: user.py
